feat: complete scoped tasks and historical sample delivery